@@ -1,5 +1,9 @@
 2009-03-02  Alan Modra  <amodra@bigpond.net.au>
 
+	2009-01-11  Jan Kratochvil  <jan.kratochvil@redhat.com>
+	* ld-elf/linkoncerdiff.d, ld-elf/linkoncerdiff1.s,
+	ld-elf/linkoncerdiff2.s: New.
+
 	2008-10-10  Nathan Froyd  <froydnj@codesourcery.com>
 	* ld-powerpc/attr-gnu-12-1.s: New file.
 	* ld-powerpc/attr-gnu-12-2.s: New file.
